[package]
name = "rusk-task"
version = "0.1.2"
edition = "2024"
resolver = "3"
license = "Apache-2.0"
description = "An asynchronous task runner in Rust, aiming to be a “simpler Make.”"
repository = "https://github.com/gw31415/rusk-task"

[[bin]]
name = "rusk"
path = "src/main.rs"

[dependencies]
deno_task_shell = "0.26.1"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
ignore = "0.4.23"
toml = "0.9.10"
colored = "3.0.0"
hashbrown = { version = "0.16.1", features = ["serde"] }
itertools = "0.14.0"
path-dedot = "3.1.1"
pathdiff = "0.2.3"
once_cell = "1.20.3"
unicode-width = "0.2.2"
